<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">


    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="Edit Profile"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savechangesButton">


        <EditText
            android:id="@+id/UsernameEntry"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/PasswordEntry"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/PasswordEntryConfirm"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/colorAccent" />
    </LinearLayout>

    <Button
        android:id="@+id/savechangesButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:onClick="saveChangesButton"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:onClick="backToLogin"
        android:text="@string/log_out"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton"
        app:layout_constraintVertical_bias="1.0" />


    <ImageButton
        android:id="@+id/profilePicButton"
        android:layout_width="157dp"
        android:layout_height="136dp"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/nick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_settings" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePicButton">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.494">

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Username"
                android:textColor="@color/wc_logo_blue"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="285dp" />

            <EditText
                android:id="@+id/username_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:ems="10"
                android:hint="username"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/wc_logo_pink" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bioText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bio"
                android:textColor="@color/wc_logo_blue"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="338dp" />

            <EditText
                android:id="@+id/bioEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70sp"
                android:ems="10"
                android:hint="bio"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/wc_logo_pink" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/wc_logo_pink"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Change Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_settings" />


</android.support.constraint.ConstraintLayout>
